<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/loan"
        android:layout_width="0dp"
        android:layout_height="17dp"
        android:text="@string/loan"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/terms"
        android:layout_width="0dp"
        android:layout_height="17dp"
        android:text="@string/terms"
        android:layout_marginTop="31dp"
        app:layout_constraintTop_toBottomOf="@+id/loan"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/interest"
        android:layout_width="0dp"
        android:layout_height="17dp"
        android:text="@string/interest_rate"
        android:layout_marginTop="41dp"
        app:layout_constraintTop_toBottomOf="@+id/terms"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/loanAmount"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="number"
        android:hint="50000"
        app:layout_constraintLeft_toRightOf="@+id/loan"
        android:layout_marginLeft="50dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginRight="20dp"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/term"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintLeft_toRightOf="@+id/terms"
        android:hint="7"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="20dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/loanAmount" />

    <EditText
        android:id="@+id/interestRate"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="6.5%"
        android:layout_marginRight="20dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/term"
        app:layout_constraintLeft_toRightOf="@+id/interest"
        android:layout_marginLeft="86dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="17dp"
        android:text="@string/discount"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/interest"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="17dp"
        android:text="@string/monthly_patment"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/monthly_discount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="$350.00"
        android:layout_marginTop="13dp"
        app:layout_constraintTop_toBottomOf="@+id/interestRate"
        app:layout_constraintLeft_toRightOf="@+id/textView4"
        android:layout_marginLeft="27dp"
        android:layout_marginRight="8dp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/monthly_payment"
        android:layout_width="0dp"
        android:layout_height="17dp"
        android:hint="$256.75"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/monthly_discount"
        app:layout_constraintLeft_toRightOf="@+id/textView5"
        android:layout_marginLeft="27dp"
        android:layout_marginRight="8dp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="1.0" />

    <Button
        android:id="@+id/calculate"
        android:layout_width="103dp"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        android:layout_marginLeft="80dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Back"
        app:layout_constraintLeft_toRightOf="@+id/calculate"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/monthly_payment"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.285" />

</android.support.constraint.ConstraintLayout>