<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/yearlyPayment"
        android:layout_width="0dp"
        android:layout_height="17dp"
        android:text="@string/yearlyPayment"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="31dp"
        app:layout_constraintTop_toBottomOf="@+id/starting_Balance" />

    <TextView
        android:id="@+id/terms"
        android:layout_width="0dp"
        android:layout_height="17dp"
        android:text="@string/terms"
        android:layout_marginTop="31dp"
        app:layout_constraintTop_toBottomOf="@+id/yearlyPayment"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/interest"
        android:layout_width="0dp"
        android:layout_height="17dp"
        android:text="@string/interest_rate"
        android:layout_marginTop="41dp"
        app:layout_constraintTop_toBottomOf="@+id/terms"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/payment"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="number"
        android:text="@integer/payment"
        android:hint="5500"
        app:layout_constraintLeft_toRightOf="@+id/yearlyPayment"
        android:layout_marginLeft="46dp"
        android:layout_marginRight="20dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/balance" />

    <EditText
        android:id="@+id/term"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintLeft_toRightOf="@+id/terms"
        android:text="@integer/years"
        android:hint="35"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="20dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/payment" />

    <EditText
        android:id="@+id/interestRate"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@integer/interestRate"
        android:hint="6.5%"
        android:layout_marginRight="20dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/term"
        app:layout_constraintLeft_toRightOf="@+id/interest"
        android:layout_marginLeft="86dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="17dp"
        android:text="@string/roth_balance"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/marginalRate" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="17dp"
        android:text="@string/taxable_savings"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/rothIRA"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="$350.00"
        app:layout_constraintLeft_toRightOf="@+id/textView4"
        android:layout_marginLeft="116dp"
        android:layout_marginRight="20dp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/marginal_tax_rate" />

    <TextView
        android:id="@+id/taxableSavings"
        android:layout_width="0dp"
        android:layout_height="17dp"
        android:hint="$256.75"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/rothIRA"
        app:layout_constraintLeft_toRightOf="@+id/textView5"
        android:layout_marginLeft="69dp"
        android:layout_marginRight="20dp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/calculate"
        android:layout_width="103dp"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        android:layout_marginLeft="80dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Back"
        app:layout_constraintLeft_toRightOf="@+id/calculate"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/taxableSavings"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.285" />

    <TextView
        android:id="@+id/starting_Balance"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:text="@string/statringBalance"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/balance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:text="@integer/startBalance"
        android:hint="3000"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toRightOf="@+id/starting_Balance"
        android:layout_marginLeft="66dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/marginalRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/marginalTaxRate"
        android:layout_marginTop="35dp"
        app:layout_constraintTop_toBottomOf="@+id/interest"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/marginal_tax_rate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@integer/marginalRate"
        android:hint="25.0"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/interestRate"
        android:layout_marginRight="20dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/marginalRate"
        android:layout_marginLeft="58dp"
        app:layout_constraintHorizontal_bias="0.0" />

</android.support.constraint.ConstraintLayout>